--- a/RedCorp_Application/src/main/resources/application.properties
+++ b/RedCorp_Application/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Mirkito10
 
 server.port=8080
 
