--- a/RedCorp_Application/src/main/resources/application.properties
+++ b/RedCorp_Application/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp
 spring.datasource.username=postgres
-spring.datasource.password=Mirkito10
+spring.datasource.password=admin
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=8080
