--- a/RedCorp_Application/src/main/resources/application.properties
+++ b/RedCorp_Application/src/main/resources/application.properties
@@ -2,11 +2,10 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp
+spring.datasource.url=jdbc:postgresql://containers-us-west-44.railway.app:6451/railway
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=iSRpaIbrDKhuAHQMVx5U
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-server.port=8080
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
 spring.devtools.restart.log-condition-evaluation-delta=false
