--- a/RedCorp_Application/src/main/resources/application.properties
+++ b/RedCorp_Application/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp
+spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp2
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jackson.serialization.write-dates-as-timestamps=false
