--- a/RedCorp_Application/src/main/resources/application.properties
+++ b/RedCorp_Application/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://redcorp.postgres.database.azure.com:5432/postgres
-spring.datasource.username=qrdgydnjnx@redcorp
-spring.datasource.password=10Z787P76751016Q$
+spring.datasource.url=jdbc:postgresql://localhost/dbRedCorp2
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
